--- a/Web/public/css/style.css
+++ b/Web/public/css/style.css
@@ -8,7 +8,7 @@
     --bg-dark: #121212; /* Fundo principal */
     --bg-medium: #1E1E1E; /* Fundo dos cards */
     --bg-header: rgba(30, 30, 30, 0.8); /* Fundo Transparente Header */
-
+    
     /* Cores de Texto */
     --text-primary: #F5F5F5; /* Texto principal (Branco Gelo) */
     --text-secondary: #AAAAAA; /* Texto secundário (Cinza) */
@@ -24,8 +24,8 @@
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    min-height: 100vh;
     
     margin: 0;
     padding: 0;
@@ -52,7 +52,7 @@ h2 {
 
 h3 {
     font-family: 'Archivo Black';
-    font-size: 1.5rem; /* 24px */
+    font-size: 1rem; /* 16px */
     margin: 0;
     margin-block: 0;
 }
@@ -77,20 +77,19 @@ a {
 
 /* Configurações Header */
 
-header, footer {
+header {
     width: 100%;
-    height: 8%;
+    height: 60px;
     display: flex;
     align-items: center;
-}
-
-header {
     justify-content: center;
     
     position: sticky;
     top: 0;
+    z-index: 1000;
     backdrop-filter: blur(10px);
     background-color: var(--bg-header);
+    box-shadow: 0 2px 10px rgba(0,0,0,0.3);
 }
 
 header nav {
@@ -103,35 +102,48 @@ header nav {
 /* Configurações Header Deslogado */
 
 .header__nav__deslogado {
-    width: 30%;
     display: flex;
+    align-items: center;
+    gap: 2rem;
 }
 
 .ranking__banda {
-    width: 30%;
     display: flex;
     align-items: center;
-
+    padding-right: 20px;
     border-right: 2px solid var(--text-secondary);
-    margin-right: 1%;
 }
 
 .login__cadastro {
-    width: 70%;
+    display: flex;
+    align-items: center;
 }
 
 .navbar__items {
-    width: 100%;
     display: flex;
     align-items: center;
-
-    gap: 15%;
+    gap: 20px;
 }
 
-.btn {
-    background-color: var(--text-primary);
-    color: black;
-    padding: 1% 3%;
+.navbar__items a {
+    transition: 0.3s;
+    display: flex; /* Ajuda a alinhar o texto */
+    align-items: center;
+}
+
+.navbar__items a:hover {
+    padding-bottom: 10%;
+    border-bottom: 3px solid var(--feeling-angry);
+}
+
+.botao__cta {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 15px;
+
     border-radius: 5px;
+    color: black;
+    background-color: var(--text-primary);
 }
 
