--- a/Web/public/css/register_login.css
+++ b/Web/public/css/register_login.css
@@ -1,5 +1,18 @@
+.response__card {
+    width: 20%;
+    height: 10%;
+
+    background-color: white;
+    color: black;
+
+    align-self: center;
+    justify-self: center;
+}
+
 main {
     display: flex;
+    flex-grow: 1;
+    justify-content: center;
     flex-direction: column;
     align-items: center;     
 
