--- a/Web/public/css/style.css
+++ b/Web/public/css/style.css
@@ -26,7 +26,10 @@
 body {
     width: 100%;
     min-height: 100vh;
-    
+
+    display: flex;
+    flex-direction: column;
+
     margin: 0;
     padding: 0;
     
