--- a/Web/public/css/register_login.css
+++ b/Web/public/css/register_login.css
@@ -1,12 +1,29 @@
-.response__card {
+#modal__card {
     width: 20%;
-    height: 10%;
+    height: 4vh;
+    
+    display: none;
+    position: fixed;
+    top: 8%;
+    
+    background-color: var(--bg-medium);
+    box-shadow: 0 0 30px rgba(0,0,0,0.8);
+    border-radius: 10px;
+    
+    padding: 20px;
 
-    background-color: white;
-    color: black;
+    color: white;
+    text-align: center;
+    font-family: 'Inter';
+    font-weight: bold;    
+}
 
-    align-self: center;
-    justify-self: center;
+.modal__success {
+    border-left: 10px solid var(--feeling-catharsis);
+}
+
+.modal__error {
+    border-left: 10px solid var(--feeling-angry);
 }
 
 main {
@@ -15,7 +32,7 @@ main {
     justify-content: center;
     flex-direction: column;
     align-items: center;     
-
+    
     margin-top: 1rem;
     
     gap: 2rem; 
