Pequenas mudanças em css globais, criação do HTML e CSS da tela de navegação, integração da navegação com a API.

--- a/Web/public/css/landing_page.css
+++ b/Web/public/css/landing_page.css
@@ -1,11 +1,6 @@
-/* Css da Main */
-
 main {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
+    width: 100%;
 }
-
 
 /* CSS do Banner */
 
