--- a/Web/public/css/style.css
+++ b/Web/public/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 
-/* Configurações Compartilhadas */
+/* CSS Compartilhado */
 
 :root {
     /* Cores de Base */
@@ -21,13 +21,16 @@
     --feeling-energy: #FACC15;
     --feeling-challenge: #F97316;
     --feeling-catharsis: #10B981;    
+
 }
+/* CSS das Estruturas */
 
 body {
     width: 100%;
     min-height: 100vh;
 
     display: flex;
+    align-items: center;
     flex-direction: column;
 
     margin: 0;
@@ -37,7 +40,15 @@ body {
     background-color: var(--bg-dark);
 }
 
-/* Configurações de Texto */
+main {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+
+/* CSS de Texto */
 
 h1 {
     font-family: 'Archivo Black';
@@ -76,7 +87,7 @@ a {
     color: inherit;
 }
 
-/* Configurações Header */
+/* CSS Header */
 
 header {
     width: 100%;
@@ -100,7 +111,7 @@ header nav {
     align-items: center;
 }
 
-/* Configurações Header Deslogado */
+/* CSS Header Deslogado */
 
 .header__nav__deslogado {
     display: flex;
@@ -161,6 +172,40 @@ header nav {
     font-size: 1.5rem;
     margin: 0;
 }
+
+/* CSS dos Inputs */
+
+.input__box {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem; 
+}
+
+.input__box label {
+    font-family: 'Inter', sans-serif;
+    font-size: 0.9rem;
+    color: var(--text-secondary);
+}
+
+.input__box input {
+    background-color: #161616; 
+    border: 1px solid #333;
+    border-radius: 5px;
+    padding: 12px;
+    
+    color: var(--text-primary);
+    outline: none;
+    transition: 0.3s;
+}
+
+.input__box input:focus {
+    border-color: var(--feeling-angry); 
+}
+
+.input__box input::placeholder {
+    color: #555;
+}
+
 
 /* CSS do Footer */
 
