--- a/Web/public/css/style.css
+++ b/Web/public/css/style.css
@@ -113,7 +113,7 @@ header nav {
 
 /* CSS Header Deslogado */
 
-.header__nav__deslogado {
+.header__nav {
     display: flex;
     align-items: center;
     gap: 2rem;
@@ -137,7 +137,7 @@ header nav {
     gap: 20px;
 }
 
-.navbar__items a {
+.navbar__items__options {
     transition: 0.3s;
     display: flex;
     align-items: center;
@@ -146,7 +146,7 @@ header nav {
     padding-bottom: 5px;
 }
 
-.navbar__items a:hover {
+.navbar__items__options:hover {
     border-color: var(--feeling-angry);
     color: var(--feeling-angry);
 }
