Página de banda finalizada, interações do usuário concluídas. Curtir música, favoritar música e favoritar banda concluídos.

--- a/Web/public/css/banda.css
+++ b/Web/public/css/banda.css
@@ -142,6 +142,11 @@ main button {
 }
 
 /* CSS dos álbuns e músicas */
+#albuns {
+    display: none;
+    flex-direction: column;
+    gap: 15px;
+}
 
 details {
     background-color: #1a1a1a;
@@ -173,6 +178,7 @@ summary:hover {
 }
 
 .album__year {
+    font-family: 'Inter';
     color: #888;
 }
 
