--- a/Web/public/css/banda.css
+++ b/Web/public/css/banda.css
@@ -16,10 +16,7 @@ main button {
     display: flex;
     align-items: end;
     
-    /* background-image: url('../assets/images/banners/BMTH.png'); */
-    
     background-size: cover;
-    background-position: center;
     background-repeat: no-repeat;
     
     border-radius: 16px 16px 0 0;
@@ -83,8 +80,9 @@ main button {
 }
 
 .genre {
-    background-color: rgba(255, 255, 255, 0.3);
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: rgba(0, 0, 0, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(8px);
 }
 
 /* CSS da navbar */
