--- a/Web/public/css/estilo.css
+++ b/Web/public/css/estilo.css
@@ -21,7 +21,7 @@
     --feeling-energy: #FACC15;
     --feeling-challenge: #F97316;
     --feeling-catharsis: #10B981;    
-
+    
 }
 /* CSS das Estruturas */
 
@@ -29,11 +29,11 @@ body {
     width: 100%;
     /* height: 100vh; */
     min-height: 100vh;
-
+    
     display: flex;
     align-items: center;
     flex-direction: column;
-
+    
     margin: 0;
     padding: 0;
     
@@ -44,11 +44,11 @@ body {
 main {
     width: 90%;
     min-height: 0;
-
+    
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-
+    
     gap: 2rem;
 }
 
@@ -113,20 +113,15 @@ header nav {
     width: 90%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
-
-/* CSS Header Deslogado */
 
 .header__nav {
     display: flex;
-    align-items: center;
     gap: 2rem;
 }
 
 .ranking__banda {
     display: flex;
-    align-items: center;
     padding-right: 20px;
     border-right: 2px solid var(--text-secondary);
 }
@@ -148,12 +143,19 @@ header nav {
     align-items: center;
     
     border-bottom: 3px solid transparent;
-    padding-bottom: 5px;
 }
 
 .navbar__items__options:hover {
     border-color: var(--feeling-angry);
     color: var(--feeling-angry);
+}
+
+.btn_logout {
+    background: none;
+    border: none;
+    font-family: 'Inter';
+    font-size: 1rem;
+    color: white;
 }
 
 /* CSS dos Botões */
@@ -169,7 +171,7 @@ header nav {
 
 .botao__cta:hover {
     transition: 0.3s;
-    transform: scale(1.5);
+    transform: scale(1.2);
 }
 
 .botao {
@@ -217,7 +219,7 @@ header nav {
 footer {
     width: 100%;
     padding: 1.5rem 0;
-
+    
     background-color: var(--bg-header); 
     box-shadow: 0 2px 10px rgba(0,0,0,0.3);
 }
