--- a/Web/public/css/index.css
+++ b/Web/public/css/index.css
@@ -86,6 +86,7 @@ main {
     height: 80px;
     object-fit: contain;
     flex-shrink: 0;
+    margin-left: 15px;
 }
 
 .titulo__texto {
@@ -212,7 +213,7 @@ main {
 
 .lista__bandas {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     gap: 3rem;
 }
 
