--- a/Web/public/css/estilo.css
+++ b/Web/public/css/estilo.css
@@ -213,7 +213,6 @@ header nav {
     color: #555;
 }
 
-
 /* CSS do Footer */
 
 footer {
@@ -295,4 +294,33 @@ footer {
     font-size: 0.8rem;
     color: var(--text-secondary);
     opacity: 0.7;
+}
+
+/* CSS do modal */
+
+#modal-global {
+    display: none;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    z-index: 9999;
+    
+    padding: 15px 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+    
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    color: white;
+    font-weight: bold;
+}
+
+.modal__erro {
+    background-color: #DC2626;
+    border-left: 5px solid #7F1D1D;
+}
+
+.modal__sucesso {
+    background-color: #10B981;
+    border-left: 5px solid #064E3B;
 }
